pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-without-auth.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-without-auth
  namespace: default

spec:
  ingressClassName: nginx
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
